test/valid/FieldIdEqMethodId/Main.plume
/**
 * @author Diogo Marques, 30100
 */
class Main extends Object is
	
	method main : () -> String is
		new FieldIdEqMethodId(0).toString()